--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,10 @@ include = [
 ]
 
 [features]
-default = ["bigint", "bitvec"]
+default = ["bigint", "bitvec", "time"]
 bigint = ["num-bigint"]
 bitvec = ["bit-vec"]
+time = ["chrono"]
 
 [dependencies.num-bigint]
 version = "0.2"
@@ -30,4 +31,8 @@ default-features = false
 
 [dependencies.bit-vec]
 version = "0.4.3"
+optional = true
+
+[dependencies.chrono]
+version = "0.4.6"
 optional = true
