--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,10 @@ include = [
 ]
 
 [features]
-default = ["bigint", "bitvec"]
+default = ["bigint", "bitvec", "time"]
 bigint = ["num"]
 bitvec = ["bit-vec"]
+time = ["chrono"]
 
 [dependencies]
 
@@ -29,4 +30,8 @@ optional = true
 
 [dependencies.bit-vec]
 version = "0.4.3"
+optional = true
+
+[dependencies.chrono]
+version = "0.4.6"
 optional = true
